--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -47,15 +47,15 @@
     {
       "cell_type": "code",
       "source": [
-        "string=s.split()\n",
-        "print(string)"
+        "s=s.split()\n",
+        "print(s)"
       ],
       "metadata": {
         "id": "6mGVa3SQYLkb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a01d547f-c2a4-4a9c-eac8-2656620e3940"
+        "outputId": "8cc35add-06a4-41c4-ca20-9046eea7b230"
       },
       "execution_count": 3,
       "outputs": [
@@ -94,15 +94,16 @@
     {
       "cell_type": "code",
       "source": [
-        "text=\"The diameter of {} is {} kilometers\"\n",
-        "print(text.format(planet,diameter))"
+        "planet=\"Earth\"\n",
+        "diameter=12742\n",
+        "print('The diameter of {}is {} kilometer.'.format (planet,diameter));"
       ],
       "metadata": {
         "id": "HyRyJv6CYPb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a5f05885-8ae3-491c-f5ac-c750ec3cb4bf"
+        "outputId": "82830142-8a34-44f4-d60c-f0127b517eaf"
       },
       "execution_count": 5,
       "outputs": [
@@ -110,7 +111,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The diameter of Earth is 12742 kilometers\n"
+            "The diameter of Earthis 12742 kilometer.\n"
           ]
         }
       ]
@@ -138,30 +139,24 @@
     {
       "cell_type": "code",
       "source": [
-        "d['k1'][3]['tricky'][3]['target'][3]"
+        "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}\n",
+        "print(d['k1'][3][\"tricky\"][3]['target'][3])"
       ],
       "metadata": {
         "id": "MvbkMZpXYRaw",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ac7b774c-9b3f-4dbf-e0d0-016de896a982"
+        "outputId": "26c0c146-3154-473e-eb48-3f20cf0fc2c2"
       },
       "execution_count": 7,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'hello'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 7
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
+          ]
         }
       ]
     },
@@ -198,7 +193,9 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
         "array=np.zeros(10)\n",
+        "print(\"An array of 10 zeros:\")\n",
         "print(array)"
       ],
       "metadata": {
@@ -206,7 +203,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e9401fb2-53d4-42c7-8b81-be8341c1d368"
+        "outputId": "34b22d04-f437-404f-b13e-7bcbc4e8852f"
       },
       "execution_count": 9,
       "outputs": [
@@ -214,6 +211,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "An array of 10 zeros:\n",
             "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
           ]
         }
@@ -222,15 +220,16 @@
     {
       "cell_type": "code",
       "source": [
-        "arr=np.ones(10)*5\n",
-        "print(arr)"
+        "array=np.ones(10)*5\n",
+        "print(\"An array of 10 fives:\")\n",
+        "print(array)"
       ],
       "metadata": {
         "id": "e4005lsTYXxx",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b5481c5b-95ff-4d68-a00c-a10aa71cd715"
+        "outputId": "bda52d96-8bc3-4170-eccb-b690215bd788"
       },
       "execution_count": 10,
       "outputs": [
@@ -238,6 +237,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "An array of 10 fives:\n",
             "[5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n"
           ]
         }
@@ -255,15 +255,17 @@
     {
       "cell_type": "code",
       "source": [
-        "arr=np.arange(20,36,2)\n",
-        "print(arr)"
+        "import numpy as np\n",
+        "array=np.arange(20,36,2)\n",
+        "print(\"Array of all the even integers from 20 to 35\")\n",
+        "print(array)"
       ],
       "metadata": {
         "id": "oAI2tbU2Yag-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "492bf209-c21b-4208-f91d-196af758bb05"
+        "outputId": "59a061e4-b5d4-4eb6-db82-17137627a7aa"
       },
       "execution_count": 11,
       "outputs": [
@@ -271,6 +273,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Array of all the even integers from 20 to 35\n",
             "[20 22 24 26 28 30 32 34]\n"
           ]
         }
@@ -288,17 +291,17 @@
     {
       "cell_type": "code",
       "source": [
-        "a=np.arange(0,9).reshape(3,3)\n",
-        "print(a)"
+        "x =  np.arange(0, 9).reshape(3,3)\n",
+        "print(x)"
       ],
       "metadata": {
         "id": "tOlEVH7BYceE",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "20c2c26b-aa10-489f-f262-91e449e8aa1a"
+        "outputId": "f1d2ed00-2ca2-4165-efe1-0386980f6a2a"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,26 +327,28 @@
     {
       "cell_type": "code",
       "source": [
-        "from numpy.matrixlib.defmatrix import concatenate\n",
-        "a=np.array([1,2,3])\n",
-        "b=np.array([4,5,6])\n",
-        "print(np.concatenate((a,b),axis=0))"
+        "a = np.array([1, 2, 3])\n",
+        "b = np.array([4, 5, 6])\n",
+        "np.concatenate([a, b])"
       ],
       "metadata": {
         "id": "rAPSw97aYfE0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0a9792e5-c317-4dba-b472-7ddfa8792968"
+        "outputId": "3c19873e-7e9d-4a9d-e54b-4f135986114f"
       },
-      "execution_count": 16,
+      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1 2 3 4 5 6]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4, 5, 6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     },
@@ -373,159 +378,34 @@
       "metadata": {
         "id": "T5OxJRZ8uvR7"
       },
-      "execution_count": 17,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df=pd.DataFrame([['Ravi',24],['Raju',25],['Rahul',23]])\n",
-        "df"
+        "a = np.array([1, 2, 3])\n",
+        "b = np.array([4, 5, 6])\n",
+        "np.concatenate([a, b])"
       ],
       "metadata": {
         "id": "xNpI_XXoYhs0",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 143
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "db183114-27ae-4b92-eb99-122125c1ea8a"
+        "outputId": "c844b51f-775b-417f-c6c6-3d4fd2703247"
       },
-      "execution_count": 20,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "       0   1\n",
-              "0   Ravi  24\n",
-              "1   Raju  25\n",
-              "2  Rahul  23"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-186e4b66-7350-48e5-bfaa-9d4913560ee6\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>Ravi</td>\n",
-              "      <td>24</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>Raju</td>\n",
-              "      <td>25</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>Rahul</td>\n",
-              "      <td>23</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-186e4b66-7350-48e5-bfaa-9d4913560ee6')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-186e4b66-7350-48e5-bfaa-9d4913560ee6 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-186e4b66-7350-48e5-bfaa-9d4913560ee6');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
+              "array([1, 2, 3, 4, 5, 6])"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 15
         }
       ]
     },
@@ -541,7 +421,7 @@
     {
       "cell_type": "code",
       "source": [
-        "date=pd.date_range(start='01-01-2023',end='02-10-2023',freq='24H')\n",
+        "date= pd.date_range(start='01-01-2023',end='02-10-2023',freq='24H')\n",
         "for i in date:\n",
         "  print(i)"
       ],
@@ -550,9 +430,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "53e942a3-d653-4b93-bfef-3421627b6fd9"
+        "outputId": "e96e40ec-fb22-4c50-98e5-5312353bbb10"
       },
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,7 +504,7 @@
       "metadata": {
         "id": "_XMC8aEt0llB"
       },
-      "execution_count": 22,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -638,9 +518,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
-        "outputId": "b80b5e16-90f6-4151-9d3f-cd3dc441c877"
+        "outputId": "b9ddcac1-1967-45da-b6b4-178c1a87d335"
       },
-      "execution_count": 23,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -653,7 +533,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f881f570-6ad6-4848-a2bb-69815ce10c11\">\n",
+              "  <div id=\"df-72374850-62d7-4c18-acf9-f36997b5558d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -700,7 +580,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f881f570-6ad6-4848-a2bb-69815ce10c11')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-72374850-62d7-4c18-acf9-f36997b5558d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -751,12 +631,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f881f570-6ad6-4848-a2bb-69815ce10c11 button.colab-df-convert');\n",
+              "          document.querySelector('#df-72374850-62d7-4c18-acf9-f36997b5558d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f881f570-6ad6-4848-a2bb-69815ce10c11');\n",
+              "          const element = document.querySelector('#df-72374850-62d7-4c18-acf9-f36997b5558d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -779,7 +659,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 18
         }
       ]
     }
