--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -41,7 +41,7 @@
       "metadata": {
         "id": "s07c7JK7Oqt-"
       },
-      "execution_count": 2,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -55,9 +55,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8cc35add-06a4-41c4-ca20-9046eea7b230"
+        "outputId": "bea8b3f0-5389-4237-a299-fecbb14c6ff8"
       },
-      "execution_count": 3,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +88,7 @@
       "metadata": {
         "id": "_ZHoml3kPqic"
       },
-      "execution_count": 4,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -103,9 +103,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "82830142-8a34-44f4-d60c-f0127b517eaf"
+        "outputId": "9d81fe8a-ca4f-4a2c-fcca-aa29b9e60873"
       },
-      "execution_count": 5,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "fcVwbCc1QrQI"
       },
-      "execution_count": 6,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -147,9 +147,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "26c0c146-3154-473e-eb48-3f20cf0fc2c2"
+        "outputId": "035d3053-3f32-452b-c09c-e6ee1d8ef91e"
       },
-      "execution_count": 7,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +177,7 @@
       "metadata": {
         "id": "LLiE_TYrhA1O"
       },
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -193,7 +193,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
         "array=np.zeros(10)\n",
         "print(\"An array of 10 zeros:\")\n",
         "print(array)"
@@ -203,9 +202,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "34b22d04-f437-404f-b13e-7bcbc4e8852f"
+        "outputId": "8a98a27b-a724-470c-addd-cb420ca05fe8"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,9 +228,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bda52d96-8bc3-4170-eccb-b690215bd788"
+        "outputId": "8bfa3eab-183c-4d40-8ff3-05870a6e7f37"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,9 +264,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "59a061e4-b5d4-4eb6-db82-17137627a7aa"
+        "outputId": "33ad1315-40ab-49ec-d257-b47f25a5b87d"
       },
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,9 +298,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f1d2ed00-2ca2-4165-efe1-0386980f6a2a"
+        "outputId": "ea04a8b6-c1a6-4f2e-9a03-9a1f2aa30ff2"
       },
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,9 +335,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3c19873e-7e9d-4a9d-e54b-4f135986114f"
+        "outputId": "6783a381-b01e-4c57-93c0-bb0b446b941b"
       },
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +347,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 7
         }
       ]
     },
@@ -378,34 +377,159 @@
       "metadata": {
         "id": "T5OxJRZ8uvR7"
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "a = np.array([1, 2, 3])\n",
-        "b = np.array([4, 5, 6])\n",
-        "np.concatenate([a, b])"
+        "df=pd.DataFrame([['Ravi',25],['Arjun',27],['Ravi',30]])\n",
+        "df"
       ],
       "metadata": {
         "id": "xNpI_XXoYhs0",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 143
         },
-        "outputId": "c844b51f-775b-417f-c6c6-3d4fd2703247"
+        "outputId": "a5232ea3-830b-4653-bd90-84a77f3db0a9"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([1, 2, 3, 4, 5, 6])"
+              "       0   1\n",
+              "0   Ravi  25\n",
+              "1  Arjun  27\n",
+              "2   Ravi  30"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-e85499f6-c92c-4be4-8d2d-58b043df3795\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Ravi</td>\n",
+              "      <td>25</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Arjun</td>\n",
+              "      <td>27</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Ravi</td>\n",
+              "      <td>30</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e85499f6-c92c-4be4-8d2d-58b043df3795')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-e85499f6-c92c-4be4-8d2d-58b043df3795 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-e85499f6-c92c-4be4-8d2d-58b043df3795');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 14
         }
       ]
     },
@@ -421,7 +545,7 @@
     {
       "cell_type": "code",
       "source": [
-        "date= pd.date_range(start='01-01-2023',end='02-10-2023',freq='24H')\n",
+        "date=pd.date_range(start='01-01-2023',end='02-10-2023',freq='24H')\n",
         "for i in date:\n",
         "  print(i)"
       ],
@@ -430,9 +554,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e96e40ec-fb22-4c50-98e5-5312353bbb10"
+        "outputId": "12cfb1dc-95bd-4498-b794-e03147165ec1"
       },
-      "execution_count": 19,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,162 +628,33 @@
       "metadata": {
         "id": "_XMC8aEt0llB"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "pd.DataFrame(lists)"
+        "df = pd.DataFrame(lists, columns =['A', 'B','C']) \n",
+        "print(df )"
       ],
       "metadata": {
         "id": "knH76sDKYsVX",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 143
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b9ddcac1-1967-45da-b6b4-178c1a87d335"
+        "outputId": "730c0fea-1011-4a12-af8e-57f1c15c74d0"
       },
       "execution_count": 18,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "   0    1   2\n",
-              "0  1  aaa  22\n",
-              "1  2  bbb  25\n",
-              "2  3  ccc  24"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-72374850-62d7-4c18-acf9-f36997b5558d\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "      <th>2</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>aaa</td>\n",
-              "      <td>22</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2</td>\n",
-              "      <td>bbb</td>\n",
-              "      <td>25</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>3</td>\n",
-              "      <td>ccc</td>\n",
-              "      <td>24</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-72374850-62d7-4c18-acf9-f36997b5558d')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-72374850-62d7-4c18-acf9-f36997b5558d button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-72374850-62d7-4c18-acf9-f36997b5558d');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 18
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   A    B   C\n",
+            "0  1  aaa  22\n",
+            "1  2  bbb  25\n",
+            "2  3  ccc  24\n"
+          ]
         }
       ]
     }
